Added the Search icon svg

--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="app.css">
     <title>Shopify Admin Page: By Ohiole Eboreime</title>
 </head>
 <body>
     <header>
-        <img src="" alt="Shopify Logo">
+        <a href="shopify.com"><img src="https://crushingit.tech/hackathon-assets/shopify-icon-desktop.svg" alt="Shopify Logo"></a>
         <section class="search-bar">
-            <img src="" alt="Search Icon">
+            <img src="./assets/search-icon.svg" alt="Search Icon">
             <input type="text" placeholder="Search">
         </section>
         <section class="notification-user">
@@ -32,9 +33,29 @@
                     <button>Label</button>
                 </div>   
                 <div class="select-plan">
-                    <button>Select a plan</button>
+                    <a href="shopify.com/pricing"><button>Select a plan</button></a>
                     <img src="" alt="Close icon">
                 </div>             
+            </section>
+            <section class="setup-guide">
+                <section class="setup-head">
+                    <section class="main-text">
+                        <div class="text">
+                            <h2>Setup guide</h2>
+                            <p>Use this personalized guide to get your store up and running</p>
+                        </div>
+                        <img src="" alt="Dropdown Icon">
+                    </section>
+                    <section class="complete-bar">
+                        <p>1/5 completed</p>
+                        <div class="bar"></div>
+                    </section>
+                </section>
+                <section class="main-guide">
+                    <section class="each-guide">
+                    
+                    </section>
+                </section>
             </section>
         </section>
     </main>
