Changes to the main div's CSS

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="app.css">
     <title>Shopify Admin Page: By Ohiole Eboreime</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet" />
 </head>
 <body>
     <header>
@@ -15,7 +18,7 @@
         </section>
         <section class="notification-user">
             <div class="notification-btn">
-                <img src="" alt="Notification Bell Icon">
+                <img src="./assets/bell.svg" alt="Notification Bell Icon">
             </div>
             <div class="user">
                 <p class="name">Davii Collections</p>
@@ -30,11 +33,11 @@
             <section class="trial-alert">
                 <div class="text">
                     <p>Extend your trial for $1/month for 3 months on select plans.</p>
-                    <button>Label</button>
+                    <!-- <button>Label</button> -->
                 </div>   
                 <div class="select-plan">
                     <a href="shopify.com/pricing"><button>Select a plan</button></a>
-                    <img src="" alt="Close icon">
+                    <img src="./assets/close.svg" alt="Close icon">
                 </div>             
             </section>
             <section class="setup-guide">
@@ -53,7 +56,74 @@
                 </section>
                 <section class="main-guide">
                     <section class="each-guide">
-                    
+                        <div class="guide-title">
+                            <img src="https://crushingit.tech/hackathon-assets/icon-dashed-circle.svg" alt="Complete checkbox for the guide">
+                            <p>Customize your online store</p>
+                        </div>
+                        <div class="guide-info">
+                            <div class="guide-text">
+                                <p>Choose a theme and add your logo, colors, and images to reflect your brand. <br>
+                                Learn More</p>
+                                <button>Customize theme</button>
+                            </div>
+                            <img src="" alt="Guide Image">
+                        </div>
+                    </section>
+                    <section class="each-guide">
+                        <div class="guide-title">
+                            <img src="https://crushingit.tech/hackathon-assets/icon-dashed-circle.svg" alt="Complete checkbox for the guide">
+                            <p>Customize your online store</p>
+                        </div>
+                        <div class="guide-info">
+                            <div class="guide-text">
+                                <p>Choose a theme and add your logo, colors, and images to reflect your brand. <br>
+                                Learn More</p>
+                                <button>Customize theme</button>
+                            </div>
+                            <img src="" alt="Guide Image">
+                        </div>
+                    </section>
+                    <section class="each-guide">
+                        <div class="guide-title">
+                            <img src="https://crushingit.tech/hackathon-assets/icon-dashed-circle.svg" alt="Complete checkbox for the guide">
+                            <p>Customize your online store</p>
+                        </div>
+                        <div class="guide-info">
+                            <div class="guide-text">
+                                <p>Choose a theme and add your logo, colors, and images to reflect your brand. <br>
+                                Learn More</p>
+                                <button>Customize theme</button>
+                            </div>
+                            <img src="" alt="Guide Image">
+                        </div>
+                    </section>
+                    <section class="each-guide">
+                        <div class="guide-title">
+                            <img src="https://crushingit.tech/hackathon-assets/icon-dashed-circle.svg" alt="Complete checkbox for the guide">
+                            <p>Customize your online store</p>
+                        </div>
+                        <div class="guide-info">
+                            <div class="guide-text">
+                                <p>Choose a theme and add your logo, colors, and images to reflect your brand. <br>
+                                Learn More</p>
+                                <button>Customize theme</button>
+                            </div>
+                            <img src="" alt="Guide Image">
+                        </div>
+                    </section>
+                    <section class="each-guide">
+                        <div class="guide-title">
+                            <img src="https://crushingit.tech/hackathon-assets/icon-dashed-circle.svg" alt="Complete checkbox for the guide">
+                            <p>Customize your online store</p>
+                        </div>
+                        <div class="guide-info">
+                            <div class="guide-text">
+                                <p>Choose a theme and add your logo, colors, and images to reflect your brand. <br>
+                                Learn More</p>
+                                <button>Customize theme</button>
+                            </div>
+                            <img src="" alt="Guide Image">
+                        </div>
                     </section>
                 </section>
             </section>
