--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <a href="shopify.com"><img src="https://crushingit.tech/hackathon-assets/shopify-icon-desktop.svg" alt="Shopify Logo"></a>
+        <a href="https://www.shopify.com"><img src="./assets/shopifylogo.svg" alt="Shopify Logo"></a>
         <section class="search-bar">
             <img src="./assets/search-icon.svg" alt="Search Icon">
             <input type="text" placeholder="Search">
@@ -36,7 +36,7 @@
                     <!-- <button>Label</button> -->
                 </div>   
                 <div class="select-plan">
-                    <a href="shopify.com/pricing"><button>Select a plan</button></a>
+                    <a href="https://www.shopify.com/pricing"><button>Select a plan</button></a>
                     <img src="./assets/close.svg" alt="Close icon">
                 </div>             
             </section>
@@ -47,82 +47,82 @@
                             <h2>Setup guide</h2>
                             <p>Use this personalized guide to get your store up and running</p>
                         </div>
-                        <img src="" alt="Dropdown Icon">
+                        <img src="./assets/angleup.svg" alt="Dropdown Icon">
                     </section>
                     <section class="complete-bar">
                         <p>1/5 completed</p>
-                        <div class="bar"></div>
+                        <div class="bar">
+                            <div class="inner-bar"></div>
+                        </div>
                     </section>
                 </section>
                 <section class="main-guide">
                     <section class="each-guide">
                         <div class="guide-title">
-                            <img src="https://crushingit.tech/hackathon-assets/icon-dashed-circle.svg" alt="Complete checkbox for the guide">
+                            <img src="./assets/check.svg" alt="Complete checkbox for the guide">
                             <p>Customize your online store</p>
                         </div>
                         <div class="guide-info">
                             <div class="guide-text">
-                                <p>Choose a theme and add your logo, colors, and images to reflect your brand. <br>
-                                Learn More</p>
-                                <button>Customize theme</button>
+                                <p>Choose a theme and add your logo, colors, and images to reflect your brand. <span><a href="https://help.shopify.com/en/manual/online-store/themes/customizing-themes">Learn More</a></span></p>
+                                <button class="main-btn">Customize theme</button>
                             </div>
-                            <img src="" alt="Guide Image">
+                            <img src="https://crushingit.tech/hackathon-assets/customise-store.png" alt="Guide Image">
                         </div>
                     </section>
                     <section class="each-guide">
                         <div class="guide-title">
-                            <img src="https://crushingit.tech/hackathon-assets/icon-dashed-circle.svg" alt="Complete checkbox for the guide">
-                            <p>Customize your online store</p>
+                            <img src="./assets/check.svg" alt="Complete checkbox for the guide">
+                            <p>Add your first product</p>
                         </div>
                         <div class="guide-info">
                             <div class="guide-text">
-                                <p>Choose a theme and add your logo, colors, and images to reflect your brand. <br>
-                                Learn More</p>
-                                <button>Customize theme</button>
+                                <p>Write a description, add photos, and set pricing for the products you plan to sell. <span><a href="https://help.shopify.com/en/manual/products/add-update-products">Learn more</a></span></p>
+                                <div class="buttons">
+                                    <button class="main-btn">Add product</button>
+                                    <button class="import-btn">Import Product</button>
+                                </div>
                             </div>
-                            <img src="" alt="Guide Image">
+                            <img src="https://crushingit.tech/hackathon-assets/product.png" alt="Guide Image">
                         </div>
                     </section>
                     <section class="each-guide">
                         <div class="guide-title">
-                            <img src="https://crushingit.tech/hackathon-assets/icon-dashed-circle.svg" alt="Complete checkbox for the guide">
-                            <p>Customize your online store</p>
+                            <img src="./assets/check.svg" alt="Complete checkbox for the guide">
+                            <p>Add a custom domain</p>
                         </div>
                         <div class="guide-info">
                             <div class="guide-text">
-                                <p>Choose a theme and add your logo, colors, and images to reflect your brand. <br>
-                                Learn More</p>
-                                <button>Customize theme</button>
+                                <p>Your current domain is 222219.myshopify.com but you can add a custom domain to help customers find your online store. <span><a href="https://help.shopify.com/en/manual/domains">Learn more</a></span></p>
+                                <button class="main-btn">Add domain</button>
                             </div>
-                            <img src="" alt="Guide Image">
+                            <img src="https://crushingit.tech/hackathon-assets/website.png" alt="Guide Image">
                         </div>
                     </section>
                     <section class="each-guide">
                         <div class="guide-title">
-                            <img src="https://crushingit.tech/hackathon-assets/icon-dashed-circle.svg" alt="Complete checkbox for the guide">
-                            <p>Customize your online store</p>
+                            <img src="./assets/check.svg" alt="Complete checkbox for the guide">
+                            <p>Name your store</p>
                         </div>
                         <div class="guide-info">
                             <div class="guide-text">
-                                <p>Choose a theme and add your logo, colors, and images to reflect your brand. <br>
-                                Learn More</p>
-                                <button>Customize theme</button>
+                                <p>Your temporary store name is currently Davii collections. The store name appears in your admin and your online store. <span><a href="https://help.shopify.com/en/manual/intro-to-shopify/initial-setup/setup-business-settings#set-or-change-your-online-store-name-and-legal-business-name">Learn More</a></span></p>
+                                <button class="main-btn">Name store</button>
                             </div>
-                            <img src="" alt="Guide Image">
+                            <img src="https://crushingit.tech/hackathon-assets/name-store.png" alt="Guide Image">
                         </div>
                     </section>
                     <section class="each-guide">
                         <div class="guide-title">
-                            <img src="https://crushingit.tech/hackathon-assets/icon-dashed-circle.svg" alt="Complete checkbox for the guide">
-                            <p>Customize your online store</p>
+                            <img src="./assets/check.svg" alt="Complete checkbox for the guide">
+                            <p>Set up a payment provider</p>
                         </div>
                         <div class="guide-info">
                             <div class="guide-text">
-                                <p>Choose a theme and add your logo, colors, and images to reflect your brand. <br>
-                                Learn More</p>
-                                <button>Customize theme</button>
+                                <p>Choose a payment provider to start accepting payments. You’ll need to create an account with the payment provider and set it up with your Shopify store. <span><a href="https://help.shopify.com/en/manual/payments">Learn More</a></span></p>
+                                <button class="main-btn">Set up payment</button>
                             </div>
-                            <img src="" alt="Guide Image">
+                            <img src="https://crushingit.tech/hackathon-assets/payment.png" alt="Guide Image">
                         </div>
                     </section>
                 </section>
