--- a/index.html
+++ b/index.html
@@ -65,9 +65,14 @@
                         <div class="guide-info">
                             <div class="guide-text">
                                 <p>Choose a theme and add your logo, colors, and images to reflect your brand. <span><a href="https://help.shopify.com/en/manual/online-store/themes/customizing-themes">Learn More</a></span></p>
-                                <button class="main-btn">Customize theme</button>
+                                <div class="buttons">
+                                    <button class="main-btn">Customize theme</button>
+                                </div>
                             </div>
-                            <img src="https://crushingit.tech/hackathon-assets/customise-store.png" alt="Guide Image">
+                            <div class="img-container">
+                                <img src="https://crushingit.tech/hackathon-assets/customise-store.png" alt="Guide Image">
+                                <div class="blur"></div>
+                            </div>
                         </div>
                     </section>
                     <section class="each-guide">
@@ -94,7 +99,9 @@
                         <div class="guide-info">
                             <div class="guide-text">
                                 <p>Your current domain is 222219.myshopify.com but you can add a custom domain to help customers find your online store. <span><a href="https://help.shopify.com/en/manual/domains">Learn more</a></span></p>
-                                <button class="main-btn">Add domain</button>
+                                <div class="buttons">
+                                    <button class="main-btn">Add domain</button>
+                                </div>
                             </div>
                             <img src="https://crushingit.tech/hackathon-assets/website.png" alt="Guide Image">
                         </div>
@@ -107,7 +114,9 @@
                         <div class="guide-info">
                             <div class="guide-text">
                                 <p>Your temporary store name is currently Davii collections. The store name appears in your admin and your online store. <span><a href="https://help.shopify.com/en/manual/intro-to-shopify/initial-setup/setup-business-settings#set-or-change-your-online-store-name-and-legal-business-name">Learn More</a></span></p>
-                                <button class="main-btn">Name store</button>
+                                <div class="buttons">
+                                    <button class="main-btn">Name store</button>
+                                </div>
                             </div>
                             <img src="https://crushingit.tech/hackathon-assets/name-store.png" alt="Guide Image">
                         </div>
@@ -120,7 +129,9 @@
                         <div class="guide-info">
                             <div class="guide-text">
                                 <p>Choose a payment provider to start accepting payments. You’ll need to create an account with the payment provider and set it up with your Shopify store. <span><a href="https://help.shopify.com/en/manual/payments">Learn More</a></span></p>
-                                <button class="main-btn">Set up payment</button>
+                                <div class="buttons">
+                                    <button class="main-btn">Set up payment</button>
+                                </div>
                             </div>
                             <img src="https://crushingit.tech/hackathon-assets/payment.png" alt="Guide Image">
                         </div>
