Designed the Landing Page

--- a/index.html
+++ b/index.html
@@ -88,7 +88,10 @@
                                     <button class="import-btn">Import Product</button>
                                 </div>
                             </div>
-                            <img src="https://crushingit.tech/hackathon-assets/product.png" alt="Guide Image">
+                            <div class="img-container">
+                                <img src="https://crushingit.tech/hackathon-assets/product.png" alt="Guide Image">
+                                <div class="blur"></div>
+                            </div>
                         </div>
                     </section>
                     <section class="each-guide">
@@ -103,7 +106,10 @@
                                     <button class="main-btn">Add domain</button>
                                 </div>
                             </div>
-                            <img src="https://crushingit.tech/hackathon-assets/website.png" alt="Guide Image">
+                            <div class="img-container">
+                                <img src="https://crushingit.tech/hackathon-assets/website.png" alt="Guide Image">
+                                <div class="blur"></div>
+                            </div>
                         </div>
                     </section>
                     <section class="each-guide">
@@ -118,7 +124,10 @@
                                     <button class="main-btn">Name store</button>
                                 </div>
                             </div>
-                            <img src="https://crushingit.tech/hackathon-assets/name-store.png" alt="Guide Image">
+                            <div class="img-container">
+                                <img src="https://crushingit.tech/hackathon-assets/name-store.png" alt="Guide Image">
+                                <div class="blur"></div>
+                            </div>
                         </div>
                     </section>
                     <section class="each-guide">
@@ -133,7 +142,10 @@
                                     <button class="main-btn">Set up payment</button>
                                 </div>
                             </div>
-                            <img src="https://crushingit.tech/hackathon-assets/payment.png" alt="Guide Image">
+                            <div class="img-container">
+                                <img src="https://crushingit.tech/hackathon-assets/payment.png" alt="Guide Image">
+                                <div class="blur"></div>
+                            </div>
                         </div>
                     </section>
                 </section>
