Added the menu and notifications menu

--- a/index.html
+++ b/index.html
@@ -19,11 +19,57 @@
         <section class="notification-user">
             <div class="notification-btn">
                 <img src="./assets/bell.svg" alt="Notification Bell Icon">
+                <div class="notification-menu">
+                    <div class="heading">
+                        <h3>Alerts</h3>
+                        <div class="icons">
+                            <img src="./assets/notification-hamburger.svg" alt="Notification menu button">
+                            <img src="./assets/notification-tick.svg" alt="Notification Tick Icon">
+                        </div>
+                    </div>
+                    <div class="text">
+                        <p>Alerts about your store and account will show here</p>
+                    </div>
+                </div>
             </div>
             <div class="user">
                 <p class="name">Davii Collections</p>
                 <div class="user-short">
                     <p>DC</p>
+                </div>
+                <div class="menu-bar">
+                    <div class="top">
+                        <div class="name">
+                            <div class="left-side">
+                                <p class="short-name">DC</p>
+                                <p class="long-name">Davii Collections</p>
+                            </div>
+                            <img src="./assets/check-short.svg" alt="Check Icon">
+                        </div>
+                        <div class="house-label">
+                            <img src="./assets/house.svg" alt="House Icon">
+                            <a href="https://admin.shopify.com">All stores</a>
+                        </div>
+                    </div>
+                    <nav class="nav-links">
+                        <ul>
+                            <li><a href="https://admin.shopify.com">Help Center</a></li>
+                            <li><a href="https://admin.shopify.com">Changelog</a></li>
+                            <li><a href="https://admin.shopify.com">Community Forums</a></li>
+                            <li><a href="https://admin.shopify.com">Hire a Shopify Partner</a></li>
+                            <li><a href="https://admin.shopify.com">Keyboard Shortcuts</a></li>
+                        </ul>
+                    </nav>
+                    <div class="email-side">
+                        <div class="email">
+                            <p class="main-name">David Micheal</p>
+                            <p class="main-email">davidmicheal@gmail.com</p>
+                        </div>
+                        <ul>
+                            <li><a href="https://admin.shopify.com">Manage account</a></li>
+                            <li><a href="https://admin.shopify.com">Log out</a></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </section>
@@ -57,7 +103,7 @@
                     </section>
                 </section>
                 <section class="main-guide">
-                    <section class="each-guide">
+                    <section class="each-guide active">
                         <div class="guide-title">
                             <img src="./assets/check.svg" alt="Complete checkbox for the guide">
                             <p>Customize your online store</p>
