--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 </head>
 <body>
     <header>
-        <a href="https://www.shopify.com"><img src="./assets/shopifylogo.svg" alt="Shopify Logo"></a>
+        <a href="https://www.shopify.com" class="logo">
+            <img src="./assets/shopifylogo.svg" alt="Shopify Logo" class="desktop-logo">
+            <img src="./assets/shopifylogo-short.svg" alt="Shopify Logo" class="mobile-logo">
+        </a>
         <section class="search-bar">
             <img src="./assets/search-icon.svg" alt="Search Icon">
             <input type="text" placeholder="Search">
@@ -79,7 +82,7 @@
             <section class="trial-alert" id="alert">
                 <div class="text">
                     <p>Extend your trial for $1/month for 3 months on select plans.</p>
-                    <!-- <button>Label</button> -->
+                    <a href="https://www.shopify.com/pricing"><button>Select a plan</button></a>
                 </div>   
                 <div class="select-plan">
                     <a href="https://www.shopify.com/pricing"><button>Select a plan</button></a>
