--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Setting up your store on Shopify" />
+    <meta name="keywords" content="Store Setup, store, setup guides" />
+    <meta name="author" content="Ohiole Eboreime Ojo" />
     <link rel="stylesheet" href="app.css">
     <title>Shopify Admin Page: By Ohiole Eboreime</title>
     <link rel="icon" href="./assets/shopifylogo-short.svg">
