--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                                 </div>
                             </div>
                             <div class="img-container">
-                                <img src="https://crushingit.tech/hackathon-assets/customise-store.png" alt="Guide Image">
+                                <img src="./assets/free-credit-card.png" alt="Guide Image">
                                 <div class="blur"></div>
                             </div>
                         </div>
@@ -142,7 +142,7 @@
                                 </div>
                             </div>
                             <div class="img-container">
-                                <img src="https://crushingit.tech/hackathon-assets/product.png" alt="Guide Image">
+                                <img src="./assets/free-credit-card.png" alt="Guide Image">
                                 <div class="blur"></div>
                             </div>
                         </div>
@@ -160,7 +160,7 @@
                                 </div>
                             </div>
                             <div class="img-container">
-                                <img src="https://crushingit.tech/hackathon-assets/website.png" alt="Guide Image">
+                                <img src="./assets/free-credit-card.png" alt="Guide Image">
                                 <div class="blur"></div>
                             </div>
                         </div>
@@ -178,7 +178,7 @@
                                 </div>
                             </div>
                             <div class="img-container">
-                                <img src="https://crushingit.tech/hackathon-assets/name-store.png" alt="Guide Image">
+                                <img src="./assets/free-credit-card.png" alt="Guide Image">
                                 <div class="blur"></div>
                             </div>
                         </div>
@@ -196,7 +196,7 @@
                                 </div>
                             </div>
                             <div class="img-container">
-                                <img src="https://crushingit.tech/hackathon-assets/payment.png" alt="Guide Image">
+                                <img src="./assets/free-credit-card.png" alt="Guide Image">
                                 <div class="blur"></div>
                             </div>
                         </div>
